<resources>
    <string name="app_name">RideOne</string>
    <string name="action_settings">Settings</string>
    <string name="action_driver_status">Status</string>
    <string name="menu_item_save">Save</string>
    <string name="menu_item_next">Next</string>
    <string name="title_activity_driver_status">Ride setup</string>
    <string name="alert_network_error">Network Error</string>

    <string-array name="locations">
        <item>Berkley</item>
        <item>Burlingame</item>
        <item>Campbell</item>
        <item>Cupertino</item>
        <item>Daly City</item>
        <item>Dublin</item>
        <item>Fremont</item>
        <item>Menlo Park</item>
        <item>Millbrae</item>
        <item>Mountain View</item>
        <item>Oakland</item>
        <item>Palo Alto</item>
        <item>Redwood City</item>
        <item>San Carlos</item>
        <item>San Francisco</item>
        <item>San Jose</item>
        <item>San Mateo</item>
        <item>Santa Clara</item>
        <item>Sunnyvale</item>
        <item>Walnut Creek</item>
    </string-array>

    <string-array name="spots">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array >

    <string-array name="timerange">
        <item>3:00 to 4:00</item>
        <item>4:00 to 5:00</item>
        <item>5:00 to 6:00</item>
        <item>6:00 to 7:00</item>
    </string-array >


    <string name="title_activity_home">RideOne</string>
    <string name="menu_status_label">Status</string>
    <string name="menu_filter_label">Filter</string>
    <string name="menu_profile_label">Profile</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This user name or password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_sign_in">SignInActivity</string>
    <string name="hintUserName">User Name</string>
    <string name="hintPassword">Password</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="hintPhone">Phone</string>
    <string name="email">Email</string>
    <string name="register">Register</string>
    <string name="register_save">Next</string>
    <string name="btn_next">Next</string>
    <string name="register_update">Save</string>
    <string name="save">Save</string>
    <string name="signup_register">Register</string>
    <string name="logout">Logout</string>
    <string name="firstName">First name</string>
    <string name="fullName">Full Name</string>
    <string name="lastName">Last name</string>
    <string name="title_activity_filter">Filters</string>

    <string name="hello_world">Hello world!</string>
    <string name="reserve_ride_label">Are you sure you want to reserve this ride?</string>
    <string name="title_activity_ride_detail">RideDetailActivity</string>

</resources>
