<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.walmartlabs.classwork.rideone.activities.HomeActivity">
    <item
        android:id="@+id/miStatus"
        android:title="@string/menu_status_label"
        android:icon="@drawable/ic_wheel"
        app:showAsAction="ifRoom">
    </item>

    <item
        android:id="@+id/miFilter"
        android:title="@string/menu_filter_label"
        android:icon="@drawable/ic_filters"
        app:showAsAction="ifRoom|collapseActionView" />

    <item
        android:id="@+id/miProfile"
        android:title="@string/menu_profile_label"
        android:icon="@drawable/ic_profile2"
        app:showAsAction="ifRoom"
        android:onClick="onProfileView">
    </item>

    <item
        android:id="@+id/miActionProgress"
        android:title="Loading..."
        android:visible="false"
        android:orderInCategory="100"
        app:showAsAction="ifRoom"
        app:actionLayout="@layout/footer_progress" />

    <item android:id="@+id/action_logout"
        android:title="@string/logout"
        app:showAsAction="ifRoom"
        android:orderInCategory="10"
        android:icon="@mipmap/ic_logout"
        />
</menu>
