<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.walmartlabs.classwork.rideone.activities.RegisterUserActivity">

    <android.support.design.widget.TextInputLayout android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/edUserName"
            android:hint="@string/hintUserName"
            android:maxLines="1"
            android:singleLine="true"
            android:textSize="@dimen/fieldSize" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/edPassword"
            android:hint="@string/hintPassword"
            android:inputType="textPassword"
            android:maxLines="1"
            android:singleLine="true"
            android:textSize="@dimen/fieldSize" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/edPasswordConfirm"
            android:hint="@string/confirmPassword"
            android:inputType="textPassword"
            android:maxLines="1"
            android:singleLine="true"
            android:textSize="@dimen/fieldSize" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/edFirstName"
            android:hint="@string/firstName"
            android:maxLines="1"
            android:singleLine="true"
            android:textSize="@dimen/fieldSize" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/edLastName"
            android:hint="@string/lastName"
            android:maxLines="1"
            android:singleLine="true"
            android:textSize="@dimen/fieldSize" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/edEmail"
            android:maxLines="1"
            android:singleLine="true"
            android:hint="@string/email"
            android:layout_gravity="center_horizontal"
            android:textSize="@dimen/fieldSize" />
    </android.support.design.widget.TextInputLayout>

    <Button android:id="@+id/btnRegister" style="?android:textAppearanceSmall"
        android:layout_width="match_parent" android:layout_height="wrap_content"
        android:layout_marginTop="16dp" android:text="@string/register"
        android:textStyle="bold"
        android:onClick="registerUser"
        android:textSize="@dimen/fieldSize" />


</LinearLayout>
